--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<div class="container">
       <div class="d1"><a href ="p5_1.html">P5</a></div>
-      <div class="d2" a href ="motion_graphic.html">motion graphic</div>
+      <div class="d2"><a href ="motion_graphic.html">motion graphic</div>
       <div class="d3">3</div>
       <div class="d4">4</div>
       <div class="d5">5</div>
