--- a/index.html
+++ b/index.html
@@ -9,19 +9,119 @@
 </head>
 <body>
 
+	
 	<div id="catalogue">
-		<div id="portfolio">PORTFOLIO</div>
+		<div style="margin-right: 300px; margin-top: 20px"><img src="img/name.png" style="width: 240px; height: 80px;"></div>
+		<div id="portfolio"><a href ="index.html">PORTFOLIO</a></div>
 	    <div id="about"><a href ="about.html">ABOUT</a></div>
 	    <div id="contact"><a href ="contact.html">CONTACT</a></div>	
 	</div>
 
-	<div class="container">
+	<div style="position: relative; width: 800px; margin: 60px auto">
+		
+		<div style="vertical-align: middle; display: inline-block; width: 185px; margin-right: 15px; vertical-align: top">
+			<a href ="motion_graphic.html"><img src="img/cover/joan.png" style="width: 185px; height: 185px; margin-right: 15px"></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Joan Zhang</b> is a short animation episode about my name logo.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Joan Zhang</b>是一个展示我名字logo的短篇动画视频。</p>
+		</div>
+
+		<div style="vertical-align: middle; display: inline-block; width: 185px; margin-right: 15px; vertical-align: top">
+			<a href ="motion_graphic.html"><img src="img/cover/jellyfish.png" style="width: 185px; height: 185px; margin-right: 15px"></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Aquarium</b> is an experimental animation about aquarium and jellyfishes that live in.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Aquarium</b>是一个关于水族馆和住在其中的水母的实验性动画。</p>
+		</div>
+
+		<div style="vertical-align: middle; display: inline-block; width: 185px; margin-right: 15px; vertical-align: top">
+			<a href ="motion_graphic.html"><img src="img/cover/clannad.png" style="width: 185px; height: 185px; margin-right: 15px"></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Clannd</b> is a work of music visualization.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Clannd</b>是一个音乐可视化的作品。</p>
+		</div>
+
+		<div style="vertical-align: middle; display: inline-block; width: 185px; vertical-align: top">
+			<a href ="motion_graphic.html"><img src="img/cover/movie.png" style="width: 185px; height: 185px; "></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Halloween</b> is a title sequence remade for the horror movie Halloween.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Halloween</b>是为恐怖电影Halloween重新设计制作的片头。</p>
+		</div>
+	</div>
+
+	<div style="position: relative; width: 800px; margin: 60px auto">
+		<!-- <h3>Individual Project in Undergraduate Period</h3> -->
+		<div style="vertical-align: middle; display: inline-block; width: 185px; margin-right: 15px; vertical-align: top">
+			<a href="see_it.html"><img src="img/cover/cover1.png" style="width: 185px; height: 185px;"></a>
+			<p style="line-height: 15px; font-size: 8px"><b>See It</b> is a set of products with APP, VR glasses and smart bracelet that encourage people for being self-discipline in weight-loss.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>See It</b>是一个包括APP, VR眼镜和智能手环的产品系列并旨在鼓励帮助人们在减肥过程中保持自律。</p>
+		</div>
+
+		<div style="vertical-align: middle; display: inline-block; width: 185px; margin-right: 15px; vertical-align: top">
+			<a href="free_diving.html"><img src="img/cover/cover2.png" style="width: 185px; height: 185px;"></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Free Diving</b> is for experiencing free diving in VR game.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Free Diving</b> 是一款可以体验自由潜水的VR游戏。</p>
+		</div>
+
+		<div style="vertical-align: middle; display: inline-block; width: 185px; margin-right: 15px; vertical-align: top">
+			<a href="reader.html"><img src="img/cover/cover3.png" style="width: 185px; height: 185px;"></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Reader</b> can endow the sense of reading paper book to e-book.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Reader</b> 是可以体验阅读纸质书籍感觉的电子阅读器。</p>
+		</div>
+
+		<div style="vertical-align: middle; display: inline-block; width: 185px; vertical-align: top">
+			<a href="disabled_dancing.html"><img src="img/cover/cover4.png" style="width: 185px; height: 185px; "></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Dance in Mirror</b> can help Cure phantom limb pain and dancing freely in VR world.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Dance in Mirror</b> 是一个帮助因截肢而被幻肢痛困扰的残疾人可以自由在虚拟世界跳舞的装置。</p>
+		</div>
+	</div>
+
+	<div style="position: relative; width: 800px; margin: 60px auto">
+		<!-- <h3>Individual Project in Undergraduate Period</h3> -->
+		<div style="vertical-align: middle; display: inline-block; width: 185px; margin-right: 15px; vertical-align: top">
+			<a href="p5_1.html"><img src="img/cover/leaf.png" style="width: 185px; height: 185px; margin-right: 15px"></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Leaf Drop Off Map</b> is an interactive map that can help people find the nearest collection point for fallen leaves.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Leaf Drop Off Map</b> 是一个可以帮助人们找到最近的落叶收集点的互动地图。</p>
+		</div>
+
+		<div style="vertical-align: middle; display: inline-block; width: 185px; margin-right: 15px; vertical-align: top">
+			<a href="p5_2.html"><img src="img/cover/data.png" style="width: 185px; height: 185px; margin-right: 15px"></a>
+			<p style="line-height: 15px; font-size: 8px"><b>My Data Portrait</b> is an interactive map that can help people find the nearest collection point for fallen leaves.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>My Data Portrait</b> 是一个可以帮助人们找到最近的落叶收集点的互动地图。</p>
+		</div>
+
+		<div style="vertical-align: middle; display: inline-block; width: 185px; margin-right: 15px; vertical-align: top">
+			<a href="p5_3.html"><img src="img/cover/consentful.png" style="width: 185px; height: 185px; margin-right: 15px"></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Leaf Drop Off Map</b> is an interactive map that can help people find the nearest collection point for fallen leaves.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Leaf Drop Off Map</b> 是一个可以帮助人们找到最近的落叶收集点的互动地图。</p>
+		</div>
+
+		<div style="vertical-align: middle; display: inline-block; width: 185px; vertical-align: top">
+			<a href="p5_4.html"><img src="img/cover/sea.png" style="width: 185px; height: 185px; "></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Leaf Drop Off Map</b> is an interactive map that can help people find the nearest collection point for fallen leaves.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Leaf Drop Off Map</b> 是一个可以帮助人们找到最近的落叶收集点的互动地图。</p>
+		</div>
+	</div>
+
+	<div style="position: relative; width: 800px; margin: 60px auto">
+		<!-- <h3>Individual Project in Undergraduate Period</h3> -->
+		<div style="vertical-align: middle; display: inline-block; width: 185px; margin-right: 15px; vertical-align: top">
+			<a href="restriction.html"><img src="img/cover/restriction.png" style="width: 185px; height: 185px; margin-right: 15px"></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Restriction</b> is an interactive device that people can experience appreciating paintings between light and shadow.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Restriction</b> 是一种互动装置，人们可以通过它体验光影之间的绘画鉴赏。</p>
+		</div>
+
+		<div style="vertical-align: middle; display: inline-block; width: 185px; margin-right: 15px; vertical-align: top">
+			<a href="chatcat.html"><img src="img/cover/chatcat.png" style="width: 185px; height: 185px; margin-right: 15px"></a>
+			<p style="line-height: 15px; font-size: 8px"><b>Chatcat</b> is a fluffy cat toy with a speech recognition and answering system inside that can behave as an intelligent cat.</p>
+			<p style="line-height: 15px; font-size: 8px"><b>Chatcat</b> 是一种毛绒绒的猫玩具，里面嵌有语音识别和应答系统。这使得它可以像表现的像一只聪明的猫。</p>
+		</div>
+
+	</div>
+
+	<!-- <div class="container">
       <div class="d1"><a href ="p5_1.html">P5</a></div>
       <div class="d2"><a href ="motion_graphic.html">motion graphic</div>
-      <div class="d3">3</div>
-      <div class="d4">4</div>
-      <div class="d5">5</div>
-      <div class="d6">6</div>
-    </div>
+      <div class="d3"><a href ="see_it.html"><img src="img/cover/cover1.png" style="width: 300px; height: 300px"></div>
+      <div class="d4"><img src="img/cover/cover2.png" style="width: 300px; height: 300px"></div>
+      <div class="d5"><img src="img/cover/cover3.png" style="width: 300px; height: 300px"></div>
+      <div class="d6"><img src="img/cover/cover4.png" style="width: 300px; height: 300px"></div>
+      <div class="d7"><img src="img/cover/cover5.png" style="width: 300px; height: 300px"></div>
+    </div> -->
 </body>
 </html>
