--- a/motion_graphic.html
+++ b/motion_graphic.html
@@ -58,7 +58,8 @@
 
 	    <div style="position: relative; width: 600px; margin: 0px 0px 0px 0px; display: inline-block;float:left;">
     	    <div style="padding: 100px 0 0 0; position: relative;">
-		        <video src="video/clannad.mp4" controls width="600" height="360" poster="img/motion/video_cover3.png" loop>logo video</video>
+		        <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/603464250?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=65d0059810" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="clannad.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+		        
 		    </div>
 
     	<div style ="position: relative; width: 400px; margin: 30px 0px 0px 0px; display: inline-block; float:left;">
