--- a/disabled_dancing.html
+++ b/disabled_dancing.html
@@ -23,7 +23,7 @@
     	<h1 style="margin-bottom: 50px">Dance in Mirror</h1>
 
     
-         <video src="video/disabled_dancing.mp4" controls width="600" height="360" poster="img/disabled_dancing/cover.png"loop>video</video>
+         <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/603466456?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=67bdaee3e3" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Dance in Mirror"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
          <div>
 
