--- a/motion_graphic.html
+++ b/motion_graphic.html
@@ -38,7 +38,7 @@
 	    <div style="position: relative; width: 600px; margin: 0px 0px 0px 50px; display: inline-block;float:right;">
 
     	    <div style="padding: 100px 0 0 0; position: relative;">
-		    <video src="video/aquarium.mp4" controls width="600" height="360" poster="img/motion/video_cover2.png"loop>logo video</video></div>
+		    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/553900812?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=05f1e256ee" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Jellyfish in the Aquarium"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
     	    <div style ="position: relative; width: 400px; margin: 30px 0px 0px 0px; display: inline-block;float:left;">
     	    <h1 style="text-align: left">Aquarium</h1>
@@ -81,8 +81,7 @@
 	    <div style="position: relative; width: 600px; margin: 0px 0px 0px 50px; display: inline-block;float:right;">
 
     	<div style="padding: 100px 0 0 0; position: relative;">
-		<video src="video/halloween.mp4" controls width="600" height="360" loop>logo video</video></div>
-
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/tuG2cZyu9cw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     	<div style ="position: relative; width: 400px; margin: 30px 0px 0px 0px; display: inline-block;
 	float:left;">
     	<h1 style="text-align: left">Halloween</h1>
