--- a/restriction.html
+++ b/restriction.html
@@ -22,7 +22,7 @@
 
     	<h1 style="margin-bottom: 50px">Restriction</h1>
 
-    	<video src="video/restriction.mp4" controls width="600" height="360" poster="img/restriction/cover.png"loop>video</video>
+    	<iframe width="560" height="315" src="https://www.youtube.com/embed/aUGP6HwhLZM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <div>
 
