--- a/motion_graphic.html
+++ b/motion_graphic.html
@@ -10,10 +10,11 @@
 <body style="text-align: center;">
 
 	<div id="catalogue">
-		<div id="portfolio">PORTFOLIO</div>
-	    <div id="about"><a href ="about.html">ABOUT</a></div>
-	    <div id="contact"><a href ="contact.html">CONTACT</a></div>	
-	</div>
+        <div style="margin-right: 300px; margin-top: 20px"><img src="img/name.png" style="width: 240px; height: 80px;"></div>
+        <div id="portfolio"><a href ="index.html">PORTFOLIO</a></div>
+        <div id="about"><a href ="about.html">ABOUT</a></div>
+        <div id="contact"><a href ="contact.html">CONTACT</a></div> 
+    </div>
     
     <div style="position: relative; width: 850px; margin: 0px auto">
 
