--- a/free_diving.html
+++ b/free_diving.html
@@ -22,7 +22,7 @@
 
     	<h1 style="margin-bottom: 50px">Free Diving</h1>
 
-    	<video src="video/free_diving.mp4" controls width="600" height="360" loop>video</video>
+    	<iframe width="560" height="315" src="https://www.youtube.com/embed/Vg6nS0TkRA8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <div>
 
