--- a/restriction.html
+++ b/restriction.html
@@ -27,7 +27,7 @@
         <div>
 
          <div style="width: 400px; float: left">
-             <p><b>Restriction is a smal but innovative attempt in the area of digital exhibition. It combines conflicats of light and shadow, part and whole together with idea of restriction. Put in reality, it can be seen as a confrontation to information explosion.</p>
+		 <p><b>Restriction</b> is a smal but innovative attempt in the area of digital exhibition. It combines conflicats of light and shadow, part and whole together with idea of restriction. Put in reality, it can be seen as a confrontation to information explosion.</p>
              <p>Restriction是在数字展览领域的一个小而创新的尝试。 它体现了光与影，局部与整体的矛盾以及主动试驾自我限制的想法。放在现实背景中，它也可以看作是对信息爆炸的对抗。</p>
          </div>
 
