--- a/see_it.html
+++ b/see_it.html
@@ -26,7 +26,7 @@
 
     	<h3 style="margin-bottom: 5px">Background</h3>
     	<div align="center">
-    	<img src="img/see_it/Background.png" style="width: 600px; height: 680px; margin: 30px auto;">
+    	<img src="img/see_it/background.png" style="width: 600px; height: 680px; margin: 30px auto;">
     	<img src="img/see_it/news.png" style="width: 600px; height: 680px; margin: 30px auto; display: inline-block;"></div>
 
 
