--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,17 @@
 </head>
 <body>
 	<div id="catalogue">
+		<div style="margin-right: 300px; margin-top: 20px"><img src="img/name.png" style="width: 240px; height: 80px;"></div>
 		<div id="portfolio"><a href ="index.html">PORTFOLIO</a></div>
 	    <div id="about"><a href ="about.html">ABOUT</a></div>
 	    <div id="contact"><a href ="contact.html">CONTACT</a></div>	
+	</div>
+
+	<div style="position: relative; width: 600px; margin: 60px auto">
+		<p><b>Phone Number: </b>86-18811301852(China), 1-9175926659(USA)</p>
+		<p><b>E-mail: </b>zhanj645@newschool.edu</p>
+		<p><b>Wechat: </b>1881130182</p>
+		
 	</div>
 </body>
 </html>
